--- a/src/app.less
+++ b/src/app.less
@@ -7,10 +7,10 @@
     width: 100%;
     height: 40px;
     line-height: 40px;
+    .borderB1px(rgba(7,17,27,.1));
     .tab-item{
       flex: 1;
       text-align: center;
-
     }
   }
   .router-link-active{
