--- a/src/app.less
+++ b/src/app.less
@@ -1,6 +1,6 @@
 
-@import (reference) "./common/skin/skin.less";
-
+@import (reference) url("./common/skin/skin.less");
+@import  url("./common/skin/base.less");
 #app{
   .tab{
     display: flex;
