--- a/src/common/skin/skin.less
+++ b/src/common/skin/skin.less
@@ -1,12 +1,16 @@
 //定义一些变量
 
 
-@import './base.less';
+@import url('./base.less');
+
+
 //变量
 @roseC : rgb(255,61,0);
 
 
-
+//.text{
+//  color: blue;
+//}
 
 
 
