vue-resource   ,   及mock.json  http访问

--- a/src/common/skin/skin.less
+++ b/src/common/skin/skin.less
@@ -1,30 +1,3 @@
-//定义一些变量
+//颜色变量
 
-
-@import url('./base.less');
-
-
-//变量
 @roseC : rgb(255,61,0);
-
-
-//.text{
-//  color: blue;
-//}
-
-
-
-//定义一些变量
-
-.borderB1px(@color){
-  position: relative;
-  &::after{
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    border-bottom: 1px solid @color;
-    content: '';
-  }
-}
