--- a/src/common/common.less
+++ b/src/common/common.less
@@ -1,13 +1,7 @@
 @import './reset.css';
-
-@import (reference) "./skin/skin.less";
-
-
-
-@roseC : rgb(255,61,0);
-
-
-
+html{
+  font-size: 14px;
+}
 [v-cloak]{
   display: none;
 }
