--- a/src/common/skin/base.less
+++ b/src/common/skin/base.less
@@ -1,3 +1,20 @@
+//函数式less
+
+.borderB1px(@color){
+  position: relative;
+  &::after{
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    border-bottom: 1px solid @color;
+    content: '';
+  }
+}
+
+
+
 //一些像素级别的问题
 
 //一像素
