--- a/src/components/seller/style.less
+++ b/src/components/seller/style.less
@@ -6,31 +6,7 @@
     width: 100%;
     height: 60vh;
   }
-
-
-  .rotate-circle{
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: inline-block;
-    //text-align: center;
-  }
-  .circle-border{
-    box-shadow: 0 2px 20px 0 rgba(0,0,0,0.1);
-  }
-  .small-circle{
-    position: absolute;
-    display: inline-block;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: 28px;
-    height: 28px;
-    border-radius: 50%;
-    background-color: green;
-  }
-
-
-
+.rotate-circle{
+  margin-top: 8px;
+}
 }
