--- a/src/components/seller/style.less
+++ b/src/components/seller/style.less
@@ -6,7 +6,17 @@
     width: 100%;
     height: 60vh;
   }
-.rotate-circle{
-  margin-top: 8px;
-}
+  .rotate-circle{
+    margin-top: 8px;
+  }
+
+
+
+
+  .cropperTest{
+    width: 100%;
+  }
+
+
+
 }
