--- a/src/common/common.less
+++ b/src/common/common.less
@@ -1,7 +1,9 @@
 @import './reset.css';
-html{
-  font-size: 14px;
+html {
+  line-height: 1;
+  font-family: PingFang SC;
 }
+
 [v-cloak]{
   display: none;
 }
