--- a/src/components/xtmlheader/style.less
+++ b/src/components/xtmlheader/style.less
@@ -4,65 +4,44 @@
 
 
 
+.xheader{
+  color: #fff;
+  background-color: #000;
+  .content-wrapper{
+    padding: 24px 12px 18px 24px;
+    font-size: 0;
+    .avatar{
+      display: inline-block;
+    }
+    .content{
+      font-size: 14px;
+      display: inline-block;
+      margin-left: 16px;
+      .title{
+        margin: 2px 0 8px 0;
+        .brand{
+          vertical-align: top;
+          width: 30px;
+          height: 18px;
+          display: inline-block;
+          background-image:url('./brand@2x.png');
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
+        }
+        .name{
+          margin-left: 6px;
+          font-size: 16px;
+          line-height: 18px;
+          font-weight: bold;
+        }
+      }
+      .description{
 
-
-.text{
-  .border1px(@color:#ccc);
-}
-
-//定义一些变量
-
-
-
-
-.border1px(@color){
-  position: relative;
-  &::after{
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    border-bottom: 1px solid @color;
-    content: '';
-  }
-}
-
-
-
-//一些像素级别的问题
-
-//一像素
-
-
-
-@media (min-device-pixel-ratio: 1.5){
-  .border1px(@color){
-    &:after{
-      transform: translateY(0.7);
+      }
     }
   }
 }
 
-@media (min-device-pixel-ratio:2){
-  .border1px(@color){
-    &::after{
-      transform: scaleY(0.5);
-    }
-  }
-}
 
-@media (min-device-pixel-ratio:3){
-  .border1px(@color){
-    &::after{
-      transform: scaleY(0.5);
-    }
-  }
-}
-@media (min-device-pixel-ratio:3){
-  .border1px(@color){
-    &::after{
-      transform: scaleY(0.4);
-    }
-  }
-}
+
+
