--- a/src/components/xtmlheader/style.less
+++ b/src/components/xtmlheader/style.less
@@ -1,17 +1,21 @@
 @import (reference) url("../../common/skin/skin.less");
 @import  url("../../common/skin/base.less");
 
-
-
-
 .xheader{
   color: #fff;
-  background-color: #000;
+  background: rgba(7,12,27,.5);
+  position: relative;
+  overflow: hidden;
   .content-wrapper{
+    position: relative;
     padding: 24px 12px 18px 24px;
     font-size: 0;
     .avatar{
       display: inline-block;
+      vertical-align: top;
+      img{
+        border-radius: 2px;
+      }
     }
     .content{
       font-size: 14px;
@@ -36,9 +40,82 @@
         }
       }
       .description{
-
+        margin-bottom: 10px;
+        line-height: 12px;
+        font-size: 12px;
+      }
+      .text{
+        font-size: 12px;
+        line-height: 10px;
+      }
+      .support-count{
+        position: absolute;
+        padding: 0 8px;
+        right: 12px;
+        bottom: 14px;
+        height: 24px;
+        line-height: 24px;
+        border-radius: 14px;
+        background-color: rgba(0,0,0,.2);
+        text-align: center;
+        .count{
+          font-size: 10px;
+          vertical-align: top;
+        }
       }
     }
+  }
+  .bullentin-wrapper{
+    background-color: rgba(0,0,0,.2);
+    position: relative;
+    height: 28px;
+    line-height: 28px;
+    padding: 0 22px 0 12px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    .bullentin-title{
+      display: inline-block;
+      vertical-align: top;
+      margin-top: 10px;
+      width: 22px;
+      height: 12px;
+      background-image: url("../../../resource/img/bulletin@2x.png");
+      background-size: 100% 100%;
+    }
+    .bullentin-text{
+      font-size: 10px;
+      margin: 0 4px;
+    }
+    .rightAB{
+      position: absolute;
+      font-size: 10px;
+      right: 12px;
+      top: 2px;
+    }
+  }
+  .background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    filter:blur(10px);
+  }
+  .detail{
+    position: fixed;
+    top: 0;
+    left: 0;
+    //right: 0;
+    //bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    overflow: auto;
+    background-color: rgba(7,7,27,.8);
   }
 }
 
