--- a/src/common/common.less
+++ b/src/common/common.less
@@ -8,6 +8,46 @@ html {
   display: none;
 }
 
+
+::-webkit-scrollbar {
+  width: 0px;height: 1px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 //旋转圆圈
   .rotate-circle{
     position: relative;
@@ -63,7 +103,7 @@ html {
   transition: all .5s cubic-bezier(.55,0,.1,1);
   background-color: #f2f2f2;
   overflow: auto;
-  -webkit-overflow-scrolling: touch;
+  //-webkit-overflow-scrolling: touch;
 }
 /* 当child-view的内容过多时会撑开child-view使得内部能够滚动 */
 .slide-left-enter, .slide-right-leave-to {
@@ -84,4 +124,15 @@ html {
 //cubic-bezier(1.0, 0.5, 0.8, 1.0)
   -webkit-transition: transform .5s linear;
   transition: transform .5s linear;
+}
+
+
+
+//dade 渐变
+//淡入淡出
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to{
+  opacity: 0;
 }
