--- a/src/components/xtmlheader/style.less
+++ b/src/components/xtmlheader/style.less
@@ -107,15 +107,15 @@
   }
   .detail{
     position: fixed;
+    z-index: 100;
     top: 0;
     left: 0;
-    //right: 0;
-    //bottom: 0;
     width: 100%;
     height: 100%;
-    z-index: 100;
     overflow: auto;
     background-color: rgba(7,7,27,.8);
+    //目前为止仅有Safari浏览器支持
+    backdrop-filter: blur(10px);
     .clearfix{
       display: inline-block;
       &::after{
@@ -147,6 +147,71 @@
         }
       }
 
+    }
+    .title{
+      display: flex;
+      width: 80%;
+      margin: 28px auto 24px;
+      .line{
+        flex: 1;
+        position: relative;
+        top: -6px;
+        .borderB1px(rgba(255,255,255,.2));
+      }
+      .text{
+        padding: 0 12px;
+        font-weight: 700;
+        font-size: 12px;
+      }
+    }
+    .supports{
+      width: 80%;
+      margin: 0 auto;
+      .support-item{
+        padding: 0 12px;
+        margin-bottom: 12px;
+        font-size:0;
+        &:last-child{
+          margin-bottom: 0;
+        }
+        .icon{
+          display: inline-block;
+          width: 16px;
+          height: 16px;
+          margin-right: 6px;
+          vertical-align: top;
+          background-size: 16px 16px;
+          background-repeat: no-repeat;
+        }
+        .text{
+          line-height: 16px;
+          font-size: 12px;
+        }
+      }
+      .decrease{
+        background-image: url("./decrease_2@2x.png");
+      }
+      .discount{
+        background-image: url("./discount_2@2x.png");
+      }
+      .special{
+        background-image: url("./special_2@2x.png");
+      }
+      .invoice{
+        background-image: url("./invoice_2@2x.png");
+      }
+      .guarantee{
+        background-image: url("./guarantee_2@2x.png");
+      }
+    }
+    .bulletin{
+      width: 80%;
+      margin: 0 auto;
+      .content{
+        padding: 0 12px;
+        line-height: 24px;
+        font-size: 12px;
+      }
     }
     .detail-close{
       position: relative;
