--- a/src/common/common.less
+++ b/src/common/common.less
@@ -136,3 +136,14 @@ html {
 .fade-enter, .fade-leave-to{
   opacity: 0;
 }
+
+
+.move-enter-active, .move-leave-active {
+  transition: all .5s linear;
+  opacity: 1;
+  transform:translate3D(0,0,0);
+}
+.move-enter, .move-leave-to{
+  opacity: 0;
+  transform:translate3D(14px,0,0);
+}
