--- a/src/common/common.less
+++ b/src/common/common.less
@@ -141,9 +141,9 @@ html {
 .move-enter-active, .move-leave-active {
   transition: all .5s linear;
   opacity: 1;
-  transform:translate3D(0,0,0);
+  transform:translate3d(0,0,0);
 }
 .move-enter, .move-leave-to{
   opacity: 0;
-  transform:translate3D(14px,0,0);
+  transform:translate3d(14px,0,0);
 }
