--- a/src/components/shopCart/style.less
+++ b/src/components/shopCart/style.less
@@ -2,8 +2,6 @@
 @import  url("../../common/skin/base.less");
 
 
-
-
 .shopCart{
   position: fixed;
   left: 0;
@@ -105,6 +103,38 @@
           color: #fff;
         }
       }
+    }
+    .ball-container{
+      .ball{
+        //落点直接写出来
+        position: fixed;
+        left: 32px;
+        bottom: 22px;
+        z-index: 9;
+
+      }
+      .drop-enter-active, .drop-leave-active {
+        transition: all .5s cubic-bezier(.31,-0.01,.72,.14);
+        .inner{
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background-color: rgb(0,160,220);
+          transition: all .5s ease-in;
+        }
+      }
+      .drop-enter, .drop-leave-to{
+        //opacity: 0;
+        //transform:translate3D(14px,0,0);
+        .inner{
+          width: 16px;
+          height: 16px;
+          border-radius: 50%;
+          background-color: rgb(0,160,220);
+          transition: all .5s linear;
+        }
+      }
+
     }
 
   }
