--- a/src/components/shopCart/style.less
+++ b/src/components/shopCart/style.less
@@ -206,12 +206,16 @@
     }
 
   }
+}
 
-
-
-
-
-
-
-
+.list-mask{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 8;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  background-color: rgba(7,17,27,0.6);
 }
