--- a/src/components/ratingselect/style.less
+++ b/src/components/ratingselect/style.less
@@ -40,6 +40,23 @@
     }
   }
   .switch{
-
+    padding: 12px 18px;
+    border-bottom: 1px solid rgba(7,17,27,0.1);
+    line-height: 24px;
+    color: rgb(147,153,159);
+    &.on{
+    .checkIcon{
+      color: #00c850;
+    }
+  }
+    .checkIcon{
+      display: inline-block;
+      vertical-align: top;
+      font-size: 24px;
+      margin-right: 24px;
+      .text{
+        font-size: 12px;
+      }
+    }
   }
 }
