--- a/src/components/ratings/style.less
+++ b/src/components/ratings/style.less
@@ -23,7 +23,7 @@
         margin-bottom: 6px;
         line-height: 28px;
         font-size: 24px;
-        color: rgb(255,253,0);
+        color: rgb(255,153,0);
       }
       .title{
         line-height: 12px;
@@ -46,7 +46,22 @@
         margin-bottom: 8px;
         font-size: 0;
         .title{
-          display: block;
+          display: inline-block;
+          vertical-align: top;
+          font-size: 12px;
+          color: rgb(7,17,27);
+        }
+        .star{
+          zoom:0.6;
+          margin-left: 12px;
+          display: inline-block;
+        }
+        .score{
+          display: inline-block;
+          vertical-align: top;
+        }
+        .delivery-*{
+          color: red;
         }
       }
     }
