--- a/src/components/ratings/style.less
+++ b/src/components/ratings/style.less
@@ -19,6 +19,10 @@
       width: 137px;
       border-right: 1px solid rgba(7,17,27,.2);
       text-align: center;
+      @media only screen and (max-width: 340px){
+        flex: 0 0 120px;
+        width: 120px;
+      }
       .score{
         margin-bottom: 6px;
         line-height: 28px;
@@ -40,29 +44,44 @@
     }
     .overview-right{
       flex:1;
-      padding-left: 24px;
+      padding:6px 0 6px 24px;
+      @media only screen and (max-width: 340px){
+        padding:6px 0 6px 12px;
+      }
       .score-wrappwer{
-        line-height: 18px;
         margin-bottom: 8px;
         font-size: 0;
         .title{
           display: inline-block;
+          line-height: 18px;
           vertical-align: top;
           font-size: 12px;
           color: rgb(7,17,27);
         }
         .star{
           zoom:0.6;
-          margin-left: 12px;
+          margin: 0 12px;
           display: inline-block;
         }
         .score{
           display: inline-block;
           vertical-align: top;
+          color: #ff9900;
         }
-        .delivery-*{
-          color: red;
+      }
+      .delivery-wrapper{
+        font-size: 0;
+        .title {
+          font-size: 12px;
+          line-height: 18px;
+          color: rgb(7,17,27);
         }
+        .delivery{
+          margin-left: 12px;
+          font-size: 12px;
+          color: rgb(147,153,159);
+        }
+
       }
     }
   }
