--- a/src/common/skin/base.less
+++ b/src/common/skin/base.less
@@ -1,5 +1,24 @@
 
-
+html{
+  font-family:
+    -apple-system,
+    "Helvetica Neue",
+    "Arial",
+    "PingFang SC",
+    "Hiragino Sans GB",
+    "STHeiti",
+    "Microsoft YaHei",
+    "Microsoft JhengHei",
+    "Source Han Sans SC",
+    "Noto Sans CJK SC",
+    "Source Han Sans CN",
+    "Noto Sans SC",
+    "Source Han Sans TC",
+    "Noto Sans CJK TC",
+    "WenQuanYi Micro Hei",
+    SimSun,
+    sans-serif;
+}
 
 
 //函数式less
@@ -60,6 +79,8 @@
     }
   }
 }
+
+
 
 
 
