--- a/src/components/ratings/style.less
+++ b/src/components/ratings/style.less
@@ -85,4 +85,55 @@
       }
     }
   }
+  .ratings-wrapper{
+    padding: 0 18px;
+    .ratingItem{
+      display: flex;
+      padding-bottom: 18px;
+      .borderB1px(rgba(7,17,27,0.1));
+      .avatar{
+        flex: 0 0 28px;
+        width: 28px;
+        margin-right: 12px;
+        img{
+          width: 100%;
+          border-radius: 50%;
+        }
+      }
+      .content{
+        position: relative;
+        flex: 1;
+        .name{
+          margin-bottom: 4px;
+          line-height: 12px;
+          font-size: 10px;
+          color: rgb(7,17,27);
+        }
+        .star-wrapper{
+          margin-bottom: 6px;
+          font-size: 0;
+          .star{
+            display: inline-block;
+            margin-right: 6px;
+            vertical-align: top;
+          }
+          .delivery{
+            display: inline-block;
+            vertical-align: bottom;
+            font-size: 12px;
+            color: rgb(153,153,153);
+          }
+        }
+        .text{
+          margin-bottom: 8px;
+          line-height: 18px;
+          font-size: 12px;
+          color: rgb(7,17,27);
+        }
+      }
+
+    }
+
+
+  }
 }
